<resources>
    <string name="app_name">Zapple EV</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_page">Zapple EV</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_password_retrieval">PasswordRetrievalActivity</string>
    <string name="title_activity_quick_order">QuickOrderActivity</string>
    <string name="title_activity_car_info_list">CarInfoListActivity</string>
    <string name="title_activity_quick_order_time">QuickOrderTimeActivity</string>
    <string name="title_activity_order_car">OrderCarActivity</string>
    <string name="title_activity_choose_car_type">ChooseCarTypeActivity</string>
	<string name="login_button_text">Login</string>
	<string name="logout_button_text">Logout</string>
	<string name="logout_prompt">Are you sure to logout?</string>
	<string name="home_page_title_text">Zapple EV</string>
	<string name="location_content_description_text">Location Service</string>
	<string name="gps_info_prompt">Location:</string>
	<string name="quick_order_cell_item_name">Quick Order</string>
	<string name="reservation_vehicle_cell_item_name">Reservation EV</string>
	<string name="query_store_cell_item_name">Query Store</string>
	<string name="member_management_cell_item_name">Member Management</string>
	<string name="order_management_cell_item_name">Order Management</string>
	<string name="account_management_cell_item_name">Account Management</string>
	<string name="customer_service_cell_item_name">Customer Service</string>
	<string name="message_center_cell_item_name">Message Center</string>
	<string name="more_cell_item_name">More</string>
	<string name="advertisement_label">Advertisement/Media</string>
	<string name="account_label">Account:</string>
	<string name="account_edit_hint">Mobile/ID/Card Id</string>
	<string name="password_label">Password:</string>
	<string name="password_edit_hint">Please Input Password</string>
	<string name="remember_password_label">Remember Password</string>
	<string name="register_account_label">Register Account</string>
	<string name="retrieve_password_label">Retrieve Password</string>
	<string name="login_label">Login</string>
	<string name="logining_prompt">Logining</string>
	<string name="search_label">Search</string>
	<string name="retrieve_by_mobile_label">Retrieve By Mobile</string>
	<string name="retrieve_by_mobile_hint">Please Input Your Register Moible</string>
	<string name="retrieve_by_email_label">Retrieve By Email</string>
	<string name="retrieve_by_email_hint">Please Input Your Register Email Address</string>
	<string name="retrieve_by_phone_label">Retrieve By Phone</string>
	<string name="retrieve_by_phone_hint">Call 400 222 888</string>
	<string name="dial_label">Dial</string>
	<string name="back_label">Back</string>
	<string name="empty_prompt">Empty</string>
	<string name="favorite_label">Favorite</string>
	<string name="reservation_label">Reservation</string>
	<string name="reservation_date_label">Reservation date</string>
	<string name="take_vehicle_date_label">Take Vehicle Date</string>
	<string name="take_vehicle_date_hint">2012.10.01</string>
	<string name="take_vehicle_time_label">Take Vehicle Time</string>
	<string name="take_vehicle_time_hint">10:30</string>
	<string name="return_vehicle_date_label">Return Vehicle Date</string>
	<string name="return_vehicle_date_hint">2012.10.01</string>
	<string name="return_vehicle_time_label">Return Vehicle Time</string>
	<string name="return_vehicle_time_hint">10:30</string>
	<string name="next_label">Next</string>
	<string name="previous_label">Previous</string>
	<string name="take_vehicle_label">Take Vehicle</string>
	<string name="city_label">City</string>
	<string name="city_hint">Please Input Or Choose City</string>
	<string name="store_label">Store</string>
	<string name="store_hint">Please Choose Store</string>
	<string name="date_label">Date</string>
	<string name="time_label">Time</string>
	<string name="return_vehicle_label">Return Vehicle</string>
	<string name="order_choose_service_label">Choose Service</string>
	<string name="child_seat_label">Child Seat</string>
	<string name="child_seat_price_label">$xx/hour</string>
	<string name="gps_device_label">GPS Device</string>
	<string name="invoice_label">Need Invoice</string>
	<string name="order_check_label">Order Check</string>
	<string name="member_info_label">Member Info</string>
	<string name="member_name_label">Member Name</string>
	<string name="remaining_label">Remaining</string>
	<string name="vehicle_info_label">Vehicle Info</string>
	<string name="model_label">Model</string>
	<string name="brand_label">Brand</string>
	<string name="take_vehicle_info_label">Take Vehicle Info</string>
	<string name="store_name_label">Store Name</string>
	<string name="return_vehicle_info_label">Return Vehicle Info</string>
	<string name="order_fee_label">Order Fee</string>
	<string name="vechicle_fee_label">Vehicle Fee: xxx</string>
	<string name="added_value_fee_label">Added Value Fee: xxx</string>
	<string name="other_fee_label">Other Fee: xxX</string>
	<string name="order_total_amount_label">Order Total Amount: xxx</string>
	<string name="submit_order_label">Submit Order</string>
	<string name="submitting_order_prompt">Submitting Order</string>
	<string name="query_store_label">Query Store</string>
	<string name="map_label">Map</string>
	<string name="list_label">List</string>
	<string name="score_label">Score</string>
	<string name="personal_info_label">Personal Info</string>
	<string name="modify_password_label">Modify Password</string>
	<string name="member_regulation_label">Member Regulation</string>
	<string name="complaint_suggestion_label">Complaint and Suggestion</string>
	<string name="old_password_label">Old Password</string>
	<string name="old_password_hint">Old Password</string>
	<string name="new_password_label">New Password</string>
	<string name="new_password_hint">New Password</string>
	<string name="check_new_password_label">Check New Password</string>
	<string name="check_new_password_hint">Check New Passoword</string>
	<string name="save_label">Save</string>
	<string name="name_label">Name:</string>
	<string name="member_rank_label">Member Rank:</string>
	<string name="id_type_label">ID Type:</string>
	<string name="id_label">ID:</string>
	<string name="mobile_label">Mobile:</string>
	<string name="email_address_label">Email:</string>
	<string name="verify_password_label">Verify Password</string>
	<string name="modify_label">Modify</string>
	<string name="order_status_label">Order Status</string>
	<string name="cancel_order_label">Cancel Order</string>
	<string name="continue_order_label">Continue Order</string>
	<string name="cancel_label">Cancel</string>
	<string name="ok_label">Ok</string>
	<string name="confirm_cancel_dialog_title">Confirm Cancel Order?</string>
	<string name="pre_paid_card_id_label">Pre-paid Card ID</string>
	<string name="pre_paid_card_remaining_label">Pre-paid Card Remaining</string>
	<string name="recharge_label">Recharge</string>
	<string name="favorite_item_label">Favorite</string>
	<string name="rental_procedure_item_label">Rental Procedure</string>
	<string name="about_item_label">About</string>
	<string name="store_tab_label">Store</string>
	<string name="vehicle_tab_label">Vehicle</string>
	<string name="power_info_label">Power Info</string>
	<string name="query_piles_site_label">Query Piles Site</string>
	<string name="nearby_piles_label">Nearby Piles</string>
	<string name="alipay_recharge_label">Alipay Recharge</string>
	<string name="alipay_recharge_hint_label">Make sure you hold Alipay account and enough remaining</string>
	<string name="debit_card_recharge_label">Debit Card Recharge</string>
	<string name="debit_card_recharge_hint_label">Make sure you hold debit card and enough remaining</string>
	<string name="credit_card_recharge_label">Credit Card Recharge</string>
	<string name="credit_card_recharge_hint_label">Make sure you hold credit card in china</string>
	<string name="login_success_label">Login Success</string>
	<string name="login_failure_label">Login Failure</string>
	<string name="alipay_account_label">Alipay Account</string>
	<string name="alipay_account_hint">Please INput Alipay Account</string>
	<string name="recharge_amount_label">Recharge Amount</string>
	<string name="recharge_amount_hint">Please Input Recharge Amount</string>
	<string name="alipay_password_label">Alipay Password</string>
	<string name="alipay_password_hint">Please Input Alipay Password</string>
	<string name="get_store_label">Get Store</string>
	<string name="getting_store_prompt">Getting Store</string>
	<string name="store_list_label"> Store List</string>
	<string name="get_store_success_label">Get Stores Success</string>
	<string name="get_store_failure_label">Get Stores Failure</string>
	<string name="vehicle_brand_model_label">"Brand（Model）："</string>
	<string name="vehicle_brand_label">Brand:</string>
	<string name="vehicle_model_label">Model:</string>
	<string name="vehicle_price_label">Price:</string>
	<string name="vehicle_dump_energy_label">Dump Energy:</string>
	<string name="vehicle_parking_garage_label">Parking Garage:</string>
	<string name="query_order_success_label">Query Order Success</string>
	<string name="query_order_failure_label">Query Order Failure</string>
	<string name="query_order_label">Query Order</string>
	<string name="quering_order_prompt">Quering Order</string>
	<string name="query_score_success_label">Query Score Success</string>
	<string name="query_score_failure_label">Query Score Failure</string>
	<string name="query_score_label">Query Score</string>
	<string name="quering_score_prompt">Quering Score</string>
	<string name="submit_order_success_label">Submit Order Success</string>
	<string name="submit_order_failure_label">Submit Order Failure</string>
	<string name="modify_personal_info_success_prompt">Modify Personal Info Success</string>
	<string name="modify_password_success_prompt">Modify Password Success</string>
	<string name="modifing_password_prompt">Modifing Password Success</string>
	<string name="submit_success_prompt">Submit Success</string>
	<string name="submitting_prompt">Submitting</string>
	<string name="continue_order_success_prompt">Continue Order Success</string>
	<string name="continuing_prompt">Continuing Order</string>
	<string name="query_favorite_failure_label">Query Favorite Failure, pls try it later</string>
	<string name="query_favorite_success_label">Query Favorite Success.</string>
	<string name="query_favorite_label">Query Favorite</string>
	<string name="quering_favorite_prompt">Quering Favorite</string>
	<string name="action_bar_search">Search</string>
	<string name="action_bar_logout">Logout</string>
	<string name="action_bar_favorite">Favorite</string>
	<string name="action_bar_help">Help</string>
	<string name="action_bar_setting">Setting</string>
	<string name="action_bar_about">About</string>
	<string name="account_setup_login">Login</string>
	<string name="account_setup_register">Register</string>
	<string name="account_setup_prompt">You want to login exist account or create a new account</string>
	<string name="order_check_remaining_label">Account Remaining: $</string>
	<string name="order_check_brand_model_label">Brand(Model):</string>
	<string name="order_check_take_store_name_label">Take Store Name:</string>
	<string name="order_check_take_vehicle_date_label">Take Vehicle Date:</string>
	<string name="order_check_return_store_name_label">Return Store Name:</string>
	<string name="order_check_vehicle_fee_label">Vehicle Fee:</string>
	<string name="order_check_added_fee_label">Added Fee:</string>
	<string name="order_check_other_fee_label">Other Fee:</string>
	<string name="order_check_total_amount_label">Total Amount:</string>
</resources>