<?xml version="1.0" encoding="utf-8"?>
<!--   Copyright (C) 2012 Zapple, www.zapple.com.cn    -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_bar_search"
          android:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_more"
          android:icon="@android:drawable/ic_menu_more"
          android:showAsAction="ifRoom">    
	    <menu>            
		    <item android:id="@+id/action_logout"
		          android:title="@string/action_bar_logout" 
		          android:showAsAction="ifRoom"/>
		    <item android:id="@+id/action_favorite"
		          android:showAsAction="ifRoom"
		          android:title="@string/action_bar_favorite" />
		    <item android:id="@+id/action_help"
		          android:title="@string/action_bar_help"
		          android:showAsAction="ifRoom" />
		    <item android:id="@+id/action_setting"
		          android:title="@string/action_bar_setting"
		          android:showAsAction="ifRoom" />
		    <item android:id="@+id/action_about"
		          android:title="@string/action_bar_about"
		          android:showAsAction="ifRoom" />
	    </menu>    
    </item>
</menu>