<?xml version="1.0" encoding="utf-8"?>
<!--   Copyright (C) 2012 Zapple, www.zapple.com.cn    -->   
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_bg_color">
   
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:stretchColumns="1">
        
        <TableRow>
	        <TextView 
	            android:id="@+id/take_vehicle_date_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:singleLine="true"
	            android:text="@string/take_vehicle_date_label"
	            android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
			<Button 
			    android:id="@+id/take_vehicle_date_button"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:layout_margin="5dip"
				android:text="@string/take_vehicle_date_hint" 
				android:lines="1"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
		</TableRow>       
		
        <TableRow>
	        <TextView 
	            android:id="@+id/take_vehicle_time_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:singleLine="true"
	            android:text="@string/take_vehicle_time_label"
	            android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
			<Button 
			    android:id="@+id/take_vehicle_time_button"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:layout_margin="5dip"
				android:text="@string/take_vehicle_time_hint" 
				android:lines="1"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
		</TableRow>        
    </TableLayout>
    
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:stretchColumns="1">
        
        <TableRow>
	        <TextView 
	            android:id="@+id/return_vehicle_date_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:singleLine="true"
	            android:gravity="right"
	            android:text="@string/return_vehicle_date_label"
	            android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
			<Button 
			    android:id="@+id/return_vehicle_date_button"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/return_vehicle_date_hint" 
				android:lines="1"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
		</TableRow>       
		
        <TableRow>
	        <TextView 
	            android:id="@+id/return_vehicle_time_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:singleLine="true"
	            android:gravity="right"
	            android:text="@string/return_vehicle_time_label"
	            android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
			<Button 
			    android:id="@+id/return_vehicle_time_button"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/return_vehicle_time_hint" 
				android:lines="1"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
		</TableRow>        
    </TableLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <Button
	        android:id="@+id/previous_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_margin="5dip"
	        android:text="@string/previous_label"
	        android:textColor="@android:color/black"
	        android:background="@drawable/btn_grey_selector"/>
	    	    
	    <Button 
	        android:id="@+id/next_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_margin="5dip"
	        android:text="@string/next_label"
	        android:textColor="@android:color/black"
	        android:background="@drawable/btn_grey_selector"/>	    
    </RelativeLayout>     
</LinearLayout>