<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2012 Li Cong, forlong401@163.com
      
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->   
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/default_bg_color"> 
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:gravity="center"
        android:text="@string/modify_password_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/title_bg"/>    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dip">
        
	    <TextView 
	        android:id="@+id/old_password_text_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:singleLine="true"
	        android:text="@string/old_password_label"
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
	        
		<EditText 
		    android:id="@+id/old_password_edit_text"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:hint="@string/old_password_hint" 
			android:inputType="text"
			android:lines="1"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:background="@drawable/input_selector"/>
	
	    <TextView 
	        android:id="@+id/new_password_text_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:singleLine="true"
	        android:text="@string/new_password_label"
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
	        
		<EditText 
		    android:id="@+id/new_password_edit_text"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:hint="@string/new_password_hint" 
			android:inputType="text"
			android:lines="1"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:background="@drawable/input_selector"/>
	
	    <TextView 
	        android:id="@+id/check_new_password_text_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:singleLine="true"
	        android:gravity="right"
	        android:text="@string/check_new_password_label"
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
	        
		<EditText 
		    android:id="@+id/return_vehicle_date_edit_text"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:hint="@string/check_new_password_hint" 
			android:inputType="text"
			android:lines="1"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:background="@drawable/input_selector"/>
	</LinearLayout>

    <Button 
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_label"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_grey_selector"/>
</LinearLayout>