<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2012 Li Cong, forlong401@163.com
      
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->          
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:background="@color/default_bg_color">	    
    
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dip">
        
        <TableRow>
		    <Button
		        android:id="@+id/personal_info_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:text="@string/personal_info_label"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
	    	        
		    <Button
		        android:id="@+id/member_regulation_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/member_regulation_label"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
		</TableRow>       
		
        <TableRow>
		    <Button
		        android:id="@+id/customer_service_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/customer_service_cell_item_name"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
	    	        
		    <Button
		        android:id="@+id/complaint_suggestion_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/complaint_suggestion_label"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
		</TableRow> 
		
        <TableRow>
		    <Button
		        android:id="@+id/message_center_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/message_center_cell_item_name"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
	    	        
		    <Button
		        android:id="@+id/power_info_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:maxWidth="150dp"
		        android:layout_margin="5dip"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/power_info_label"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
		</TableRow> 
		
        <TableRow>
		    <Button
		        android:id="@+id/nearby_piles_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/nearby_piles_label"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
	    	       
		    <Button
		        android:id="@+id/rental_procedure_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dip"
		        android:maxWidth="150dp"
		        android:singleLine="true"
		        android:ellipsize="end"		        
		        android:text="@string/rental_procedure_item_label"
		        android:textColor="@android:color/black"
		        android:background="@drawable/btn_grey_selector"/>
		</TableRow>         
    </TableLayout>
</RelativeLayout>	